<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddModActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvAddMod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addMod"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvAddModCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addModCategory" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/ddAddModCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvAddModTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addModTitle" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tiAddModTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvAddModDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addModDetails" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tiAddModDetails"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvAddModPhotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addModPhotos" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAddModPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addModTakePhoto" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddModFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addModFinished" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>