<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ModActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvModModification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modModificatino"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnModDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple_500"
                app:srcCompat="@android:drawable/ic_menu_delete" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvModSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvModCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/tvModTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvModDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modDetails" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#CFCFCF"
            android:outlineProvider="bounds">

            <TextView
                android:id="@+id/tvModDetailsContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#3A3A3A" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvModPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modPhotos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>